# lil-strider

./: .env.example  .gitignore  README.md  config.json  pyproject.toml  requirements.txt
.log/: README.md
script/: install.sh
src/: arm.py  main.py
src/components/: i2c.py  servo.py
src/components/servo/: __init__.py  i2c.py  servo.py
src/statemanagement/: device.py  logger.py
src/testScript/: libCode copy.py  libCode.py
