[project]
name = "striderbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-lis3dh>=5.2.4",
    "adafruit-circuitpython-servokit>=1.3.19",
    "python-dotenv>=1.1.0",
    "websockets>=15.0.1",
]
